--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,82 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
+    font: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+form, .confirmation-container {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 320px;
+}
+
+label {
+    margin-bottom: 8px;
+    display: block;
+    color: #2b2e4a;
+}
+
+.centered {
+    text-align: center;
+}
+
+input:not([type="checkbox"]):not([type="radio"]),
+select,
+textarea {
+    padding: 8px;
+    width: 100%;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px solid #bdc3c7;
+    border-left: 0;
+    transition: border-bottom-color 0.15s ease-in;
+
+    &:focus {
+        outline: 0;
+        border-bottom-color: #3fc1c9;
+    }
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+    margin: 6px 10px;
+}
+
+textarea {
+    resize: vertical;
+}
+
+button {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    padding: 8px 16px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #3fc1c9;
+    border: 0;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: background-color 0.15s ease-in;
+
+    &:focus:active {
+        background-color: darken(#3fc1c9, 8%);
+    }
+
+    &:focus {
+        outline: 0;
+    }
+
+    &:hover {
+        background-color: lighten(#3fc1c9, 15%);
+    }
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px;
+}
+
+.label-container {
+    display: flex;
 }
